# homepage

./: dprint.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: dprint.yaml  push_docker_image.yaml
front_vite/: dprint.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
front_vite/src/: index.css  main.tsx  routeTree.gen.ts
front_vite/src/bindings/: Label.ts  ListProjectResponse.ts  Project.ts  ProjectWithLabels.ts
front_vite/src/components/: GridItem.tsx  Logo.tsx  MarkdownWrapper.tsx  Section.tsx  ThemeProvider.tsx  planet.tsx
front_vite/src/components/layouts/: AnimatedLayout.tsx  Footer.tsx  Header.tsx
front_vite/src/components/md-components/: code-md-block.tsx  img-md-with-transitions.tsx  link-with-button.tsx  typography-1.tsx  typography-2.tsx  typography-3.tsx  typography-4.tsx  typography-p.tsx
front_vite/src/components/skeletons/: SkeletonImage.tsx
front_vite/src/components/ui/: ButtonWithIcon.tsx  SectionTitle.tsx  Typography.tsx  TypographyBlockquote.tsx  badge.tsx  button.tsx  carousel.tsx
front_vite/src/lib/: fetcher.ts
front_vite/src/routes/: __root.tsx  index.lazy.tsx
frontend_react/: package.json
rust_backend/: Cargo.toml  Dockerfile  docker-compose.yml
rust_backend/.cargo/: config.toml
rust_backend/migrations/2024-04-02-220408_create_projects/: down.sql  up.sql
rust_backend/src/: config.rs  main.rs  models.rs  schema.rs
rust_backend/src/api/: mod.rs  v0.rs
rust_backend/src/api/project/: get_project.rs  list_project.rs  list_projects.rs  mod.rs
rust_backend/src/infra/: errors.rs
rust_backend/src/infra/db/: schema.rs
rust_backend/src/infra/repositories/: mod.rs  project_repository.rs
rust_backend/src/models/: label.rs  mod.rs  project.rs  project_label.rs
rust_backend/src/utils/: mod.rs
src/: App.tsx  main.tsx  routeTree.gen.ts
src/components/: Divider.tsx  GridItem.tsx  Logo.tsx  MarkdownWrapper.tsx  Section.tsx  ThemeProvider.tsx  planet.tsx
src/components/icons/: Star.tsx
src/components/layouts/: AnimatedLayout.tsx  Footer.tsx  Header.tsx  MainLayout.tsx
src/components/skeletons/: SkeletonImage.tsx
src/components/ui/: SectionTitle.tsx
src/lib/: fetcher.ts
src/lib/SuspenseImage/: SuspenseImage.tsx
src/navigation/: NavBar.tsx  router.tsx
src/pages/: Home.tsx  Works.tsx
src/routes/: __root.tsx  index.lazy.tsx
src/routes/works/: $id.lazy.tsx  $id.tsx  index.lazy.tsx
(+4 files in other folders)
